NULL=

icondir = $(datadir)/pixmaps/peony

icon_DATA =\
	audio.svg \
	backgrounds.png \
	chit_frame.png \
	colors.png \
	emblems.png \
	erase.png \
	knob.png \
        peony-view-as-compact.png \
        peony-view-as-list.png \
        peony-view-as-normal.png \
        peony-view-as-larger.png \
        peony-view-menu-normal.png \
        peony-view-menu-larger.png \
        peony-view-menu-compact.png \
        peony-view-menu-list.png \
	thumbnail_frame.png \
	$(NULL)

EXTRA_DIST = $(icon_DATA)
