NULL=

icondir = $(datadir)/pixmaps/peony

icon_DATA =\
	ukui-audio.svg \
	ukui-backgrounds.png \
	ukui-chit_frame.png \
	ukui-colors.png \
	ukui-emblems.png \
	ukui-ukui-erase.png \
	ukui-knob.png \
        peony-view-as-compact.png \
        peony-view-as-list.png \
        peony-view-as-normal.png \
        peony-view-as-larger.png \
        peony-view-menu-normal.png \
        peony-view-menu-larger.png \
        peony-view-menu-compact.png \
        peony-view-menu-list.png \
	ukui-thumbnail_frame.png \
	$(NULL)

EXTRA_DIST = $(icon_DATA)
